remove blocker for Platform Encryption for Account.Name

--- a/classes/sdgDataProviderApexExample.cls
+++ b/classes/sdgDataProviderApexExample.cls
@@ -19,9 +19,9 @@ global with sharing class sdgDataProviderApexExample implements sdgIDataProvider
         sdgSecurity.CanQuery('sdgDataProviderApexExample:getData', 'Account', '', 'name', '', true);
 
         //This is commented to allow installation on an org where name is encrypted.         
-        //result.data = [select name from account where name like 'U%' ];
+        result.data = [select name from account  ];
 
-        result.query='CustomDataProviderExample';
+        result.query='sdgDataProviderApexExample';
         result.FullQueryCount = result.data.size();
         result.pagecount = 1;
         result.isError = false;
@@ -31,8 +31,8 @@ global with sharing class sdgDataProviderApexExample implements sdgIDataProvider
 
     global   SDG LoadSDG(String SDGTag, String ParentRecordId)
     {
-        system.debug('CustomDataProviderExample:LoadSDG');
-        SDG CoreSDG = new SDG( 'CustomDataProviderExample' );
+        system.debug('sdgDataProviderApexExample:LoadSDG');
+        SDG CoreSDG = new SDG( 'sdgDataProviderApexExample' );
 
         CoreSDG.SDGActions = getActions();
         CoreSDG.SDGFields = getFields();
